refatorado parte do codigo

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,11 +3,11 @@ plugins {
 }
 
 android {
-    namespace 'br.com.ciclocomputer'
+    namespace 'br.com.ciclocomputador'
     compileSdk 33
 
     defaultConfig {
-        applicationId "br.com.ciclocomputer"
+        applicationId "br.com.ciclocomputador"
         minSdk 29
         targetSdk 33
         versionCode 1
@@ -31,7 +31,7 @@ android {
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
