--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CicloComputador"
+        android:theme="@style/Theme.SplashScreen"
         tools:targetApi="31" >
         <activity
             android:name=".MainActivity"
